# sagittal_average

./: .gitignore  ect start  pyproject.toml  test_sagittal_brain.py
.github/workflows/: pytest.yml
docs/source/: conf.py  index.rst
docs/source/how_to/: get_started.rst
src/sagittal_average/: command.py  sagittal_brain.py
src/sagittal_average.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_sagittal_brain.py
