[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sagittal_average"
version = "0.1.0"
description = "Charlene's sagittal average tool"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sagittal_average = ["data/*.csv"]

# Experimenting with entry points
[project.scripts]
sagittal_average_run = "sagittal_average.command:main"
